[LFC][IFC] Fix fast/inline/inline-root-with-negative-margin-and-sibling-float.html https://bugs.webkit.org/show_bug.cgi?id=246465

Reviewed by Antti Koivisto.

1. The line is not considered empty from line-breaking point of view when it is constrained by a float box (it simply means that we don't force overflowing inline content on the line)
2. An intrusive float box may prevent to put any content on the line.
Now that we don't inflate the initial line height in quirks mode anymore, we don't necessiarily find floats while we are setting up the line. Such floats are found later when we check for available width for the candidate inline content.

* LayoutTests/TestExpectations:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::layoutInlineContent):
(WebCore::Layout::LineBuilder::initialize):
(WebCore::Layout::LineBuilder::close):
(WebCore::Layout::eligibleOverflowWidthAsLeading):
(WebCore::Layout::LineBuilder::lineRectForCandidateInlineContent const):
(WebCore::Layout::LineBuilder::tryPlacingFloatBox):
(WebCore::Layout::LineBuilder::handleInlineContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

Canonical link: https://commits.webkit.org/255522@main